--- a/xss/production/test/3js_carousel.html
+++ b/xss/production/test/3js_carousel.html
@@ -25,6 +25,7 @@ var renderer = new THREE.CanvasRenderer();
 var ui_;
 var SoundUtils;
 var scene = new THREE.Scene();
+scene.mouse_thru = true;
 var active_camera;
 var g_elapsed = -1;
 var g_delta = 0.0;	
@@ -154,18 +155,20 @@ application.events.dispatch("switch_cameras", []);
 			my_plane = new THREE.Object3D();
 			my_plane.events = new ev.EventHolder();
         var this__ = my_plane;
-            var img_plane;
+				var img_plane;
 	    img_plane_plane = new THREE.Plane(128, 164, null, null) ;
 	    img_plane = new THREE.Mesh(img_plane_plane, new THREE.MeshBasicMaterial());
 	    scene.addObject(img_plane);
 		img_plane.events = new ev.EventHolder();
-				my_plane.addChild(img_plane);
-            var img_reflect;
+				if(img_plane instanceof THREE.Object3D)
+					my_plane.addChild(img_plane);
+				var img_reflect;
 	    img_reflect_plane = new THREE.Plane(128, 164, null, null) ;
 	    img_reflect = new THREE.Mesh(img_reflect_plane, new THREE.MeshBasicMaterial());
 	    scene.addObject(img_reflect);
 		img_reflect.events = new ev.EventHolder();
-				my_plane.addChild(img_reflect);
+				if(img_reflect instanceof THREE.Object3D)
+					my_plane.addChild(img_reflect);
             img_reflect.doubleSided = true;
             set_object_alpha(img_reflect, 40);
             img_reflect.scale.y = 0.800000012;
@@ -189,6 +192,8 @@ my_plane.scale.y = 1;
 	}
 	);
 		application.are_obj_events = true;
+		if(my_plane instanceof THREE.Object3D)
+			scene.addObject(my_plane);
         return my_plane;
         }
 threejs_load_resources(streamer, function()
