--- a/xss/production/test/3js_class_test_2.html
+++ b/xss/production/test/3js_class_test_2.html
@@ -24,6 +24,7 @@ var renderer = new THREE.CanvasRenderer();
 var ui_;
 var SoundUtils;
 var scene = new THREE.Scene();
+scene.mouse_thru = true;
 var active_camera;
 var g_elapsed = -1;
 var g_delta = 0.0;	
@@ -103,6 +104,8 @@ application.events.dispatch("switch_cameras", []);
 	}
 	);
 		application.are_obj_events = true;
+		if(my_cylinder instanceof THREE.Object3D)
+			scene.addObject(my_cylinder);
         return my_cylinder;
         }
 threejs_load_resources(streamer, function()
